--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -38,9 +38,9 @@
 
         .content-header-item {
             display: inline-block;
-            font-size: 25px;
+            font-size: 20px;
             position: relative;
-            top: 3.5px;
+            top: 14px;
             text-decoration: underline;
             font-weight: bolder;
         }
@@ -64,13 +64,13 @@
             background-size: cover;
             background-position: center center;
             background-image: url('resource/carousel/1.jpg');
-            margin: 30px 0;
+            margin: 30px 0 0 0;
         }
 
         .title-text {
             font-size: 25px;
             font-weight: bolder;
-            padding: 20px 0;
+            padding: 0 0 20px 0;
         }
 
         .card-img-top {
@@ -180,7 +180,7 @@
                         <a href="#teamIntroduction">
                             <div class="content-header-item content-header-item-mgr">團隊介紹</div>
                         </a>
-                        <a href="#subjextIntroduction">
+                        <a href="#subjectIntroduction">
                             <div class="content-header-item ">專題介紹</div>
                         </a>
                     </div>
@@ -195,69 +195,76 @@
                 </div>
             </div>
         </div>
-
-
         <div class="container-lg">
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div class="member">
+                        <div id="memberIntroduction" style="height: 56px; width:100%;"></div>
                         <div class="title-text">組員介紹</div>
-                        <div class="card-group">
-                            <div class="card">
-                                <img src="resource/carousel/2.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">組員1</h5>
-                                    <p class="card-text">
-                                        個性：<br />
-                                        專長：<br />
-                                        工作內容：<br />
-                                    </p>
-                                </div>
-
-                            </div>
-                            <div class="card">
-                                <img src="resource/carousel/3.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">組員2</h5>
-                                    <p class="card-text">
-                                        個性：<br />
-                                        專長：<br />
-                                        工作內容：<br />
-                                    </p>
-                                </div>
-
-                            </div>
-                            <div class="card">
-                                <img src="resource/carousel/4.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">組員3</h5>
-                                    <p class="card-text">
-                                        個性：<br />
-                                        專長：<br />
-                                        工作內容：<br />
-                                    </p>
+                        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="resource/carousel/2.jpg" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="card-title">組員1</h5>
+                                        <p class="card-text">
+                                            個性：<br />
+                                            專長：<br />
+                                            工作內容：<br />
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <img src="resource/carousel/5.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">組員4</h5>
-                                    <p class="card-text">
-                                        個性：<br />
-                                        專長：<br />
-                                        工作內容：<br />
-                                    </p>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="resource/carousel/3.jpg" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="card-title">組員1</h5>
+                                        <p class="card-text">
+                                            個性：<br />
+                                            專長：<br />
+                                            工作內容：<br />
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="card">
-                                <img src="resource/carousel/6.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">組員5</h5>
-                                    <p class="card-text">
-                                        個性：<br />
-                                        專長：<br />
-                                        工作內容：<br />
-                                    </p>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="resource/carousel/4.jpg" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="card-title">組員1</h5>
+                                        <p class="card-text">
+                                            個性：<br />
+                                            專長：<br />
+                                            工作內容：<br />
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="resource/carousel/5.jpg" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="card-title">組員1</h5>
+                                        <p class="card-text">
+                                            個性：<br />
+                                            專長：<br />
+                                            工作內容：<br />
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="resource/carousel/6.jpg" class="card-img-top">
+                                    <div class="card-body">
+                                        <h5 class="card-title">組員1</h5>
+                                        <p class="card-text">
+                                            個性：<br />
+                                            專長：<br />
+                                            工作內容：<br />
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -270,6 +277,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div class="team">
+                        <div id="teamIntroduction" style="height: 56px; width:100%;"></div>
                         <div class="title-text">團隊介紹</div>
                         <div class="content-text">
                             　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
@@ -284,6 +292,7 @@
             <div class="row justify-content-center">
                 <div class="col-10">
                     <div class="subject">
+                        <div id="subjectIntroduction" style="height: 56px; width:100%;"></div>
                         <div class="title-text">專題介紹</div>
                         <div class="content-text">
                             　　介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字介紹文字。<br /><br />
