--- a/monzzle/introduction.html
+++ b/monzzle/introduction.html
@@ -12,6 +12,7 @@
         /* introduction */
         .content-header {
             justify-content: space-between;
+            border-bottom: 4px solid #000;
         }
 
         .content-header-icon {
@@ -28,7 +29,7 @@
             float: right;
         }
 
-        .content-title {
+        .content-header-title {
             font-size: 28px;
             font-weight: bolder;
             display: inline-block;
@@ -50,12 +51,8 @@
         }
 
 
-        .content-header {
-            border-bottom: 4px solid #000;
-        }
-
         .col-10 {
-            padding: 0;
+            padding: 10px 0;
         }
 
         .member-banner {
@@ -171,7 +168,7 @@
                 <div class="col-10 content-header">
                     <div class="content-header-left">
                         <img src="resource/icon/aboutus.png" class="content-header-icon">
-                        <div class="content-title">介紹</div>
+                        <div class="content-header-title">介紹</div>
                     </div>
                     <div class="content-header-right">
                         <a href="#memberIntroduction">
